Add auditable entity feature. Add to todo items.

--- a/src/Domain/Domain.csproj
+++ b/src/Domain/Domain.csproj
@@ -6,4 +6,8 @@
     <AssemblyName>CleanArchitecture.Domain</AssemblyName>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Common\" />
+  </ItemGroup>
+
 </Project>
