--- a/tests/Infrastructure.IntegrationTests/Infrastructure.IntegrationTests.csproj
+++ b/tests/Infrastructure.IntegrationTests/Infrastructure.IntegrationTests.csproj
@@ -19,7 +19,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\Src\Infrastructure\Infrastructure.csproj" />
+    <ProjectReference Include="..\..\src\Infrastructure\Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
