Upgrade to latest version of Angular 9

--- a/src/WebUI/ClientApp/package.json
+++ b/src/WebUI/ClientApp/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "echo Starting... && ng serve",
     "build": "ng build",
     "build:ssr": "ng run CleanArchitecture.WebUI:server:dev",
     "test": "ng test",
@@ -12,15 +12,15 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "8.2.14",
-    "@angular/common": "8.2.14",
-    "@angular/compiler": "8.2.14",
-    "@angular/core": "8.2.14",
-    "@angular/forms": "8.2.14",
-    "@angular/platform-browser": "8.2.14",
-    "@angular/platform-browser-dynamic": "8.2.14",
-    "@angular/platform-server": "8.2.14",
-    "@angular/router": "8.2.14",
+    "@angular/animations": "9.0.7",
+    "@angular/common": "9.0.7",
+    "@angular/compiler": "9.0.7",
+    "@angular/core": "9.0.7",
+    "@angular/forms": "9.0.7",
+    "@angular/platform-browser": "9.0.7",
+    "@angular/platform-browser-dynamic": "9.0.7",
+    "@angular/platform-server": "9.0.7",
+    "@angular/router": "9.0.7",
     "@fortawesome/angular-fontawesome": "^0.5.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.25",
     "@fortawesome/free-solid-svg-icons": "^5.11.2",
@@ -33,17 +33,18 @@
     "oidc-client": "^1.9.0",
     "popper.js": "^1.14.3",
     "rxjs": "^6.5.4",
-    "zone.js": "~0.9.1"
+    "tslib": "^1.10.0",
+    "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.803.25",
-    "@angular/cli": "8.3.25",
-    "@angular/compiler-cli": "8.2.14",
-    "@angular/language-service": "8.2.14",
+    "@angular-devkit/build-angular": "~0.900.7",
+    "@angular/cli": "9.0.7",
+    "@angular/compiler-cli": "9.0.7",
+    "@angular/language-service": "9.0.7",
     "@types/jasmine": "~3.3.9",
     "@types/jasminewd2": "~2.0.6",
-    "@types/node": "~11.10.5",
-    "codelyzer": "^5.0.1",
+    "@types/node": "^12.11.1",
+    "codelyzer": "^5.1.2",
     "jasmine-core": "~3.3.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "^4.4.1",
@@ -51,7 +52,7 @@
     "karma-coverage-istanbul-reporter": "~2.0.5",
     "karma-jasmine": "~2.0.1",
     "karma-jasmine-html-reporter": "^1.4.0",
-    "typescript": "3.5.3"
+    "typescript": "3.7.5"
   },
   "optionalDependencies": {
     "node-sass": "^4.9.3",
