--- a/src/WebUI/appsettings.json
+++ b/src/WebUI/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=CleanArchitectureDb;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "DataSource=app.db"
   },
   "Logging": {
       "LogLevel": {
