Reconfigure to use InMemory for development, SqlServer otherwise.

--- a/src/WebUI/appsettings.json
+++ b/src/WebUI/appsettings.json
@@ -1,12 +1,12 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "DataSource=app.db"
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=CleanArchitectureDb;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
-      "LogLevel": {
-        "Default": "Warning"
-      }
-    },
+    "LogLevel": {
+      "Default": "Warning"
+    }
+  },
   "IdentityServer": {
     "Clients": {
       "CleanArchitecture.WebUI": {
@@ -14,5 +14,5 @@
       }
     }
   },
-"AllowedHosts": "*"
+  "AllowedHosts": "*"
 }
