--- a/src/WebUI/WebUI.csproj
+++ b/src/WebUI/WebUI.csproj
@@ -70,6 +70,10 @@
     <Exec Command="dotnet ef migrations script --configuration $(Configuration) --idempotent --no-build --output $(TargetDir)migrations.sql"/>
   </Target>
 
+  <Target Name="CopyMigrationsScriptOnPublish" AfterTargets="Publish">
+    <Copy SourceFiles="$(TargetDir)migrations.sql" DestinationFolder="$(PublishDir)" />
+  </Target>
+
   <Target Name="PublishRunWebpack" AfterTargets="ComputeFilesToPublish">
     <!-- As part of publishing, ensure the JS resources are freshly built in production mode -->
     <Exec WorkingDirectory="$(SpaRoot)" Command="npm install" />
