Adjust production configuration.

--- a/src/WebUI/appsettings.Production.json
+++ b/src/WebUI/appsettings.Production.json
@@ -10,7 +10,7 @@
     "Key": {
       "Type": "Store",
       "StoreName": "My",
-      "StoreLocation": "LocalMachine",
+      "StoreLocation": "CurrentUser",
       "Name": "CN=MyApplication"
     }
   }
