--- a/src/WebUI/ClientApp/angular.json
+++ b/src/WebUI/ClientApp/angular.json
@@ -84,7 +84,7 @@
             "styles": [
               "./node_modules/bootstrap/dist/css/bootstrap.min.css",
               "./node_modules/ngx-bootstrap/datepicker/bs-datepicker.css",
-              "styles.css"
+              "src/styles.css"
             ],
             "scripts": [],
             "assets": [
