--- a/src/WebUI/ClientApp/package.json
+++ b/src/WebUI/ClientApp/package.json
@@ -3,60 +3,48 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "echo 'Starting...' && ng serve",
-    "start:dev": "echo 'Starting (Dev)...' && ng serve --host 0.0.0.0 --disable-host-check",
+    "prestart": "node aspnetcore-https",
+    "start": "run-script-os",
+    "start:windows": "ng serve --port 44447 --ssl --ssl-cert %APPDATA%\\ASP.NET\\https\\%npm_package_name%.pem --ssl-key %APPDATA%\\ASP.NET\\https\\%npm_package_name%.key",
+    "start:default": "ng serve --port 44447 --ssl --ssl-cert $HOME/.aspnet/https/${npm_package_name}.pem --ssl-key $HOME/.aspnet/https/${npm_package_name}.key",
     "build": "ng build",
     "build:ssr": "ng run CleanArchitecture.WebUI:server:dev",
-    "test": "ng test",
-    "lint": "ng lint",
-    "e2e": "ng e2e"
+    "watch": "ng build --watch --configuration development",
+    "test": "ng test"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "12.0.1",
-    "@angular/common": "12.0.1",
-    "@angular/compiler": "12.0.1",
-    "@angular/core": "12.0.1",
-    "@angular/forms": "12.0.1",
-    "@angular/platform-browser": "12.0.1",
-    "@angular/platform-browser-dynamic": "12.0.1",
-    "@angular/platform-server": "12.0.1",
-    "@angular/router": "12.0.1",
-    "@fortawesome/angular-fontawesome": "^0.9.0",
-    "@fortawesome/fontawesome-svg-core": "1.2.30",
-    "@fortawesome/free-solid-svg-icons": "5.14.0",
-    "aspnet-prerendering": "^3.0.1",
-    "bootstrap": "^4.3.1",
-    "core-js": "^2.6.5",
-    "jquery": "3.5.0",
-    "ngx-bootstrap": "^5.2.0",
-    "oidc-client": "^1.9.0",
-    "popper.js": "^1.14.3",
-    "rxjs": "^6.5.4",
-    "tslib": "^2.0.0",
+    "@angular/animations": "~13.1.1",
+    "@angular/common": "~13.1.1",
+    "@angular/compiler": "~13.1.1",
+    "@angular/core": "~13.1.1",
+    "@angular/forms": "~13.1.1",
+    "@angular/platform-browser": "~13.1.1",
+    "@angular/platform-browser-dynamic": "~13.1.1",
+    "@angular/platform-server": "~13.1.1",
+    "@angular/router": "~13.1.1",
+    "bootstrap": "^5.1.3",
+    "jquery": "^3.6.0",
+    "oidc-client": "^1.11.5",
+    "popper.js": "^1.16.0",
+    "run-script-os": "^1.1.6",
+    "rxjs": "~6.6.0",
+    "tslib": "^2.1.0",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^12.0.1",
-    "@angular/cli": "12.0.1",
-    "@angular/compiler-cli": "12.0.1",
-    "@angular/language-service": "12.0.1",
+    "@angular-devkit/build-angular": "~13.1.2",
+    "@angular/cli": "~13.1.2",
+    "@angular/compiler-cli": "~13.1.1",
     "@types/jasmine": "~3.6.0",
-    "@types/jasminewd2": "~2.0.6",
+    "@types/jasminewd2": "~2.0.8",
     "@types/node": "^12.11.1",
-    "codelyzer": "^6.0.0",
-    "jasmine-core": "~3.6.0",
-    "jasmine-spec-reporter": "~5.0.0",
-    "karma": "~6.3.2",
+    "jasmine-core": "~3.8.0",
+    "karma": "~6.3.0",
     "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage-istanbul-reporter": "~3.0.2",
+    "karma-coverage": "~2.0.3",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "^1.5.0",
-    "typescript": "4.2.4"
-  },
-  "optionalDependencies": {
-    "protractor": "~7.0.0",
-    "ts-node": "~5.0.1",
-    "tslint": "~6.1.0"
+    "typescript": "~4.4.4"
   }
 }
