♻️ Upgrade domain events Cleaner design with save changes interceptor.

--- a/src/Domain/Domain.csproj
+++ b/src/Domain/Domain.csproj
@@ -8,4 +8,8 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <PackageReference Include="MediatR" Version="9.0.0" />
+    </ItemGroup>
+
 </Project>
