♻️ Allow env variables and clean-up BaseUrl.

--- a/tests/WebUI.AcceptanceTests/WebUI.AcceptanceTests.csproj
+++ b/tests/WebUI.AcceptanceTests/WebUI.AcceptanceTests.csproj
@@ -20,6 +20,8 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="6.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.EnvironmentVariables" Version="6.0.1" />
+
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.0.0" />
     <PackageReference Include="Microsoft.Playwright" Version="1.22.0" />
     <PackageReference Include="SpecFlow.Plus.LivingDocPlugin" Version="3.9.57" />
