--- a/.github/workflows/live-tests.yml
+++ b/.github/workflows/live-tests.yml
@@ -18,9 +18,9 @@ jobs:
       run: dotnet restore
     - name: Build
       run: dotnet build --no-restore --configuration Release
+    - name: Install Playwright
+      run: pwsh bin/Release/net6.0/playwright.ps1 install --with-deps
     - name: Test
-      run: |
-        pwsh bin/Release/net6.0/playwright.ps1 install --with-deps
-        dotnet test
+      run: dotnet test --configuration Release
       env:
         BaseUrl: ${{ github.event.deployment_status.environment_url }}
